<resources>
    <string name="app_name">CodeFest21</string>
    <string name="signin_lable_signin">Sign In</string>
    <string name="enter_email_signin">Enter Your Email Here</string>
    <string name="enter_password_signin">Enter Your Password Here</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="signin_option">SignIn Options :</string>
    <string name="register_lable_signin">Register Here</string>


    <!--    SignUp-->
    <string name="signUp_lable">Sign Up</string>
    <string name="register_lable">Register</string>
    <string name="firstName_lable">First Name</string>
    <string name="lastName_lable">Last Name</string>
    <string name="email_lable">Email</string>
    <string name="mobile_lable">Mobile</string>
    <string name="register_Btnlable">Register</string>
    <string name="register_google_lable">Or Register Using Google</string>
    <string name="register_google_button">Google</string>
    <string name="register_nic_lable">NIC</string>
    <string name="register_gender">Gender</string>
    <string name="upload_image_register">Upload Your Image</string>
    <string name="signOut">Sign Out</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="default_notification_channel_id">Hi</string>
    <string name="fcm_title">Noti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>